2010-10-08  MIYAMUKO Katsuyuki

	* api/gist-unofficial.l (scan-gist-list), api/types.l (gist-lines): Gist の
	一覧ページにある Gist 本文の最初の 3 行を解析するようにした。
	gist-lines で取得可能。
	Gist 取得関数のここまでのまとめ。
	- list-public-gists
	  - 指定したユーザの Public な Gist を API で取得
	  - ページングなし。全データを一回で返す
	  - 自分の Gist であっても Private な Gist も取得できない
	  - gist-files を取得する唯一の方法
	  - gist-lines は nil
	- list-all-gists
	  - すべてのユーザの Gist を Web スクレイピングで取得
	  - ページングあり、2 つ目の戻り値で次のページ番号を返す
	  - 匿名ユーザの Gist, Private な Gist は取得できない
	  - gist-files は nil
	- list-my-gists
	  - 自分の Gist を Web スクレイピングで取得
	  - ページングあり、2 つ目の戻り値で次のページ番号を返す
	  - Private な Gist も取得可能
	  - gist-files は nil
	- list-starred-gists
	  - 自分がスターをつけた Gist を Web スクレイピングで取得
	  - ページングあり、2 つ目の戻り値で次のページ番号を返す
	  - gist-files と gist-owner は nil

	* api/gist-unofficial.l (deleted-gist-p): 削除された Gist なら t を返す。
	実際に通信するのでちょっと時間がかかる。

	* api/types.l (gist-private-p): gist-public-p の反対の関数を追加

	* api/types.l (gist-public-p): gist 構造体だけではなく ID (文字列または数値)
	も引数に受け付けるようにした

	* api/types.l (gist-public-clone-url, gist-embed-js-url): Private な Gist の場合に
	nil を返すようにした

	* api/types.l (gist-home-url): Private な Gist の場合に https の
	URL を返すようにした

	* api/types.l (gist-edit-url, gist-download-url): Web の編集ページ
	とダウンロードリンクの URL を返す関数を追加

2010-09-24  MIYAMUKO Katsuyuki

	* api/gist-unofficial.l (list-all-gists, scan-gist-list): All Gists の
	場合でも、次のページ番号を返すようにした。

2010-09-22  MIYAMUKO Katsuyuki

	* api/gist-filetype.l, api/types.l: guess-gist-filetype を追加。
	指定したバッファの言語を推測する。

	* api/gist-filetype.l (gist-filetype-names, gist-filetype-exts):
	Gist の言語名の一覧と拡張子の一覧を取得する

	* api/types.l (gist-home-url): Gist のホームページの URL を返す関数
	を追加。

	* 関数名を変更。coerce-user-name => coerce-user-login

	* api/types.l: url を返す関数には構造体以外にも id などを
	指定できるようにした。
	(repo-github-issues-url "miyamuko/xl-github")
	;=> "http://github.com/miyamuko/xl-github/issues"

	* api/types.l: gist-public-clone-url などが動いていなかったのを修正。

2010-09-21  MIYAMUKO Katsuyuki
