@@ -1,5 +1,8 @@
 2010-10-08  MIYAMUKO Katsuyuki
 
+	* util/struct.l (export-struct): 構造体名と predicate も export
+	するようにした
+
 	* api/gist-unofficial.l (scan-gist-list), api/types.l (gist-lines): Gist の
 	一覧ページにある Gist 本文の最初の 3 行を解析するようにした。
 	gist-lines で取得可能。
